--- a/termscondition.html
+++ b/termscondition.html
@@ -32,11 +32,23 @@
                                    </button>
                               </div>
                               <a href="index.html">
-                                   <img src="./asset/img/logo.png" alt="Logo">
+                                   <img src="./asset/img/logo-white.png" alt="Logo">
                               </a>
                          </div>
                     </div>
-                    <div class="col-xl-5 col-lg-5 col-12">
+                    <div class="col-xl-2 col-lg-2 col-6">
+                         <div class="leftmenuBoxNew">
+                              <ul>
+                                   <li>
+                                        <a href="stores.html">All Stores</a>
+                                   </li>
+                                   <li class="hideInMobileMenushow">
+                                        <a href="#">Tasks</a>
+                                   </li>
+                              </ul>
+                         </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-12">
                          <div class="header_search_box">
                               <div class="input-group">
                                    <input type="text" class="form-control" placeholder="Search Stores...">
@@ -46,21 +58,18 @@
                               </div>
                          </div>
                     </div>
-                    <div class="col-xl-5 col-lg-5 col-md-6 col-sm-6 col-6">
-                         <div class="nav_menu_bar text-end">
+                    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-6">
+                         <div class="nav_menu_bar">
                               <ul>
-                                   <li>
-                                        <a href="stores.html">All Stores</a>
-                                   </li>
-                                   <li>
-                                        <a href="#">Tasks</a>
-                                   </li>
                                    <!-- before login -->
-                                   <!-- <li>
+                                   <!-- <li style="float: right;">
                             <a href="#">Login / Signup</a>
                          </li> -->
                                    <!-- after login -->
                                    <li>
+                                        <a href="#">Deal of the Day</a>
+                                   </li>
+                                   <li style="float: right;">
                                         <div class="btn-group user_dropdown">
                                              <button type="button" class="btn btn-secondary dropdown-toggle"
                                                   data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,14 +86,14 @@
                                                             <div class="singleBox">
                                                                  <h4>Pending balance:</h4>
                                                                  <span>
-                                                                      <img src="./asset/img/diamond-sm.png" alt="">
+
                                                                       0
                                                                  </span>
                                                             </div>
                                                             <div class="singleBox">
                                                                  <h4>Available balance:</h4>
                                                                  <span>
-                                                                      <img src="./asset/img/diamond-sm.png" alt="">
+
                                                                       25
                                                                  </span>
                                                             </div>
@@ -119,19 +128,6 @@
                                    </li>
                               </ul>
                          </div>
-                         <div class="mobileNavMenu text-end">
-                              <ul>
-                                   <!-- <li class="beforeLogin">
-                            <a href="#">Login / Signup</a>
-                         </li> -->
-                                   <li class="afterLogin">
-                                        <div class="dimondShowBox">
-                                             <img src="./asset/img/diamond-sm.png" alt="">
-                                             <span>25</span>
-                                        </div>
-                                   </li>
-                              </ul>
-                         </div>
                     </div>
                </div>
           </div>
@@ -153,7 +149,19 @@
                     <ul>
                          <li>
                               <a href="myprofile.html">
-                                   <span><i class="fa-solid fa-user"></i></span>
+                                   <span><i class="fa-regular fa-list-check"></i></span>
+                                   Task
+                              </a>
+                         </li>
+                         <li>
+                              <a href="myprofile.html">
+                                   <span><i class="fa-regular fa-handshake"></i></span>
+                                   Deal of the day
+                              </a>
+                         </li>
+                         <li>
+                              <a href="myprofile.html">
+                                   <span><i class="fa-regular fa-user"></i></span>
                                    My Profile
                               </a>
                          </li>
@@ -173,6 +181,7 @@
                </div>
           </div>
      </div>
+
      <div id="termsCondition">
           <div class="container">
                <div class="row">
@@ -530,49 +539,28 @@
           </div>
      </div>
 
-     <footer id="footerArea">
+     <!-- new footer area -->
+     <footer id="footer-2">
           <div class="container">
                <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-5 col-sm-5">
-                         <div class="footerLink">
-                              <h4>PAGES</h4>
-                              <ul>
-                                   <li>
-                                        <a href="termscondition.html">Terms & Conditions</a>
-                                   </li>
-                                   <li>
-                                        <a href="privacy-policy.html">Privacy-Policy</a>
-                                   </li>
-                                   <li>
-                                        <a href="#">About Us</a>
-                                   </li>
-                                   <li>
-                                        <a href="contact.html">Contact Us</a>
-                                   </li>
-                                   <li>
-                                        <a href="#">Help & Support</a>
-                                   </li>
-                              </ul>
-                         </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-7 col-sm-7">
-                         <div class="footerLogo text-center">
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12">
+                         <div class="companyInfo">
                               <div class="logoBox">
                                    <a href="index.html">
-                                        <img src="./asset/img/logo-white.png" alt="">
+                                        <img src="./asset/img/logo.png" alt="">
                                    </a>
+                                   <p>amazing cashback deals to save more on every purchase.</p>
                               </div>
-                              <div class="socialConnect">
-                                   <h4>CONNECT WITH US</h4>
+                              <div class="socialBox">
                                    <ul>
                                         <li>
                                              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                         </li>
                                         <li>
-                                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
                                         </li>
                                         <li>
-                                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
                                         </li>
                                         <li>
                                              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -581,26 +569,47 @@
                               </div>
                          </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-12">
-                         <div class="contactInfo text-end">
-                              <h4>CONTACT INFO</h4>
-                              <div class="whatsApp">
-                                   <a href="#">
-                                        <i class="fa-brands fa-whatsapp"></i>
-                                        88 77 88 23 23
-                                   </a>
-                              </div>
-                              <div class="bottomButton">
+                    <div class="col-xl-9 col-lg-9 col-md-8 col-sm-12 col-12">
+                         <div class="footerLinkAre">
+                              <div class="singleLinkBox">
                                    <ul>
                                         <li>
-                                             <a href="#">
-                                                  <img src="./asset/img/footergooglelogo.png" alt="">
-                                             </a>
+                                             <a href="#">About Us</a>
                                         </li>
                                         <li>
-                                             <a href="#">
-                                                  <img src="./asset/img/footerchromelogo.png" alt="">
-                                             </a>
+                                             <a href="/privacy-policy.html">Privacy Policy</a>
+                                        </li>
+                                        <li>
+                                             <a href="/termscondition.html">Terms & Condition</a>
+                                        </li>
+                                        <li>
+                                             <a href="#">Partner with us</a>
+                                        </li>
+                                   </ul>
+                              </div>
+                              <div class="singleLinkBox">
+                                   <ul>
+                                        <li>
+                                             <a href="#">FAQ</a>
+                                        </li>
+                                        <li>
+                                             <a href="#">MISSING CASHBACK</a>
+                                        </li>
+                                        <li>
+                                             <a href="/contact.html">CONTACT US</a>
+                                        </li>
+                                   </ul>
+                              </div>
+                              <div class="singleLinkBox">
+                                   <ul>
+                                        <li>
+                                             <a href="#">BEST OFFERS</a>
+                                        </li>
+                                        <li>
+                                             <a href="/stores.html">BEST STORES</a>
+                                        </li>
+                                        <li>
+                                             <a href="/contact.html">CAREERS</a>
                                         </li>
                                    </ul>
                               </div>
